Changelog
=========

7.5.dev0 - (unreleased)
-----------------------

7.4 - (2016-08-03)
------------------
* Feature: Display message if there is no printed edition
  [catalin refs #73796]

7.3 - (2016-05-19)
------------------
* Bug fix: Fix pylint warnings
  [ichim-david refs #71940]

7.2 - (2016-05-04)
------------------
* Bug fix: Fix tests dependency to eea.rdfmarshaller
  [avoinea]

7.1 - (2016-02-15)
------------------
* Bug fix: Fixed an issue with the EUBookshop link
  which returned wrong books if the report was yet not
  registered in EUBookshop.
  [demarant refs #69230]
* Change: removed the "sales agent link" and simplified view by
  removing the unnecessary "published by"
  [demarant refs #68719]

7.0 - (2015-09-10)
------------------
* Change: removed jquery browser call and documented the use of Reports.Tree
  functionality and usage
  [ichimdav refs #27220]
* Change: Refactoring PDF utilities - moved to eea.converter and drop pdftk and
  pdfinfo/xpdf dependency
  [voineali refs #28522]
* Change: cleaned report.css of unused css
  [ichimdav refs #27220]

6.3 - (2015-08-18)
------------------
* Change: Auto-include zcml within plone context in order to make this package
  work without having to add it within buildout zcml directive.
  [avoinea]

6.2 - (2015-05-15)
------------------
* Change: removed Tracking of file downloaded with Google Analytics,
  this feature has been enhanced as is now part of eea.design
  [ichimdav refs #23277]

6.1 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

6.0 - (2014-03-10)
------------------
* Feature: Added Tracking of file downloaded with Google analytics,
  in the report view.
  [prospchr refs #8059]

5.9 - (2014-01-22)
------------------